bk_ida/gobmkida/g0/eyevalue_to_string
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/eyevalue_to_string/src/engine/optics.c:2339:14: error: use of undeclared identifier 'result_0'
gg_snprintf( result_0, 0x1DuLL, "[%d, %d, %d, %d]", e->a, e->b, e->c, e->d); 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/eyevalue_to_string/src/engine/optics.c:2341:14: error: use of undeclared identifier 'result_0'
gg_snprintf( result_0, 0x1DuLL, "%d%d%d%d", e->a, e->b, e->c, e->d); 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/eyevalue_to_string/src/engine/optics.c:2342:8: error: use of undeclared identifier 'result_0'
return result_0; 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/eyevalue_to_string/src/obj/1/optics.o] Error 1
